infra/k8s/elasticsearch-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: elasticsearch
  labels:
    srv: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: elasticsearch
  template:
    metadata:
      labels:
        srv: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
        ports:
        - containerPort: 9200
        readinessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 1
