infra/k8s/kafka-server-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-server
  labels:
    srv: kafka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: kafka-server
  template:
    metadata:
      labels:
        srv: kafka-server
    spec:
      hostname: kafka-server
      containers:
      - name: kafka-server
        image: spotify/kafka:latest
        ports:
        - containerPort: 2181
        - containerPort: 9092
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 5
