infra/k8s/mongo-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo
  labels:
    srv: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: mongo
  template:
    metadata:
      labels:
        srv: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        readinessProbe:
          httpGet:
            path: /
            port: 27017
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 27017
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 5
