infra/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jsreport.35.198.73.240.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jsreport
          servicePort: 80
  - host: kafka.35.198.73.240.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kafka-manager
          servicePort: 80
  - host: zipkin.35.198.73.240.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: zipkin
          servicePort: 9411
  - host: 35.198.73.240.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: web-vue
          servicePort: 80
